1. 功能。网页加载ppt 测试页面, 加载优化

--- a/module_card_girl/src/main/assets/ppt/5281a115ce50f8fd676e56b295aee5e4/index.html
+++ b/module_card_girl/src/main/assets/ppt/5281a115ce50f8fd676e56b295aee5e4/index.html
@@ -2,25 +2,28 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=10">
 <meta name="keywords" content="PPT转H5, PDF转H5, ppt转朋友圈, pdf转朋友圈">
 <meta name="format-detection" content="telephone=no"><meta content="IE=edge" http-equiv="X-UA-Compatible"><title>88a5e951419e449d9b39c7e484195ee4</title>
-<link rel="stylesheet" type="text/css" href="data/f.css">
-<link rel="stylesheet" type="text/css" href="../a.css">
-<link rel="stylesheet" type="text/css" href="../a3.css">
-<link rel="stylesheet" type="text/css" href="../tsui.css">
+
 
 <script>var firsttag="5281a115ce50f8fd676e56b295aee5e4";var optjson={read:0,desc:"",up:0,vip:8,wtoption:3};</script>
-<script src="http://lib.sinaapp.com/js/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
+<!--<script src="http://lib.sinaapp.com/js/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>-->
+<script src="../jquery-1.8.1.min.js" type="text/javascript"></script>
 <script>if (!window.jQuery){var script = document.createElement('script');script.src = "../jquery-1.8.1.min.js";document.body.appendChild(script);}</script>
 
 <script src="../canvg.js" type="text/javascript"></script>
 <script src="../player0.93.js?n=1" type="text/javascript"></script>
-<!--<script src="../thum.js" type="text/javascript"></script>-->
-<script src="pg.js" type="text/javascript"></script>
+<script src="../thum.js" type="text/javascript"></script>
+<script src="../5281a115ce50f8fd676e56b295aee5e4/pg.js" type="text/javascript"></script>
 <script src="../extend_rec0.93.js" type="text/javascript"></script>
 <script src="../scmod0-0.93.js?n=1" type="text/javascript"></script>
 <script src="../rs.js" type="text/javascript"></script>
-<script src="../pl2.js" type="text/javascript"></script>
+<script src="../pl2.js" type="text/javascript"></script><script src="../nav.all.js" type="text/javascript"></script>
+
+<link rel="stylesheet" type="text/css" href="../5281a115ce50f8fd676e56b295aee5e4/data/f.css">
+<link rel="stylesheet" type="text/css" href="../a.css">
+<link rel="stylesheet" type="text/css" href="../a3.css">
+<link rel="stylesheet" type="text/css" href="../tsui.css">
 <link rel="stylesheet" type="text/css" href="../nav.css">
-<script src="../nav.all.js" type="text/javascript"></script>
+
 </head><body>
 <div id="loading" style="position:fixed;width:114px;left:50%;top:45%;margin-left:-100px;margin-top:-70px;"><span style=""></span><img src="../loading.gif" style="margin-top:40px;margin-left:60px;"></img></div>
 <div id="aud" style="display:none"><audio src=""></audio></div>
